actually put java8 code into opsc-java8 directory